test/visibility/use-no-qualified/noUnderscoreOnlyList.good
noUnderscoreOnlyList.chpl:5: syntax error: syntax error near '_'
